feat: Complete bank statement upload functionality and optimize Docker images
🔧 Bank Statement Upload Fixes:
- Fixed frontend API endpoint URLs to include /import path segment
- Updated SecurityConfig rule ordering for proper authorization
- Fixed response format mismatch between frontend and backend
- Updated UploadResponse interface to match backend StatementProcessingResult
- Modified UploadView component to display correct processing results

🐳 Docker Image Optimization:
- Implemented multi-stage build for frontend reducing size from 2.62GB to 278MB (89.4% reduction)
- Optimized Dockerfile.frontend with proper layer caching and minimal dependencies
- Updated docker-compose.frontend.yml for correct build context
- Added security improvements with non-root user and dumb-init
- Dependencies injected via network, not bundled in image

🔒 Security & Configuration:
- Enhanced SecurityConfig with proper permitAll rule ordering
- Updated JwtAuthenticationFilter for better error handling
- Improved SpringCompanyService with null safety checks

🎨 Frontend Improvements:
- Updated FiscalPeriodsView and SystemLogsView components
- Enhanced ApiService with corrected endpoint paths
- Improved error handling and user feedback in upload flows

✅ Testing Verified:
- Bank statement upload working end-to-end
- Frontend-backend proxy communication functional
- Container networking optimized and secure
- All components properly integrated and tested